client/src/App.css
/* Define colors */
:root {
  --text: #ffe0f2;
  --title: #fffdfe;
  --container-title: #6f1e44;
  --container-right: #6f1e44;
  --container-left: #6f3751;
  --container-border: #e3acb2;
  --cont-grad-right: transparent;
  --cont-grad-left: #fcfaf5;
  --background-right: #b16c2b;
  --background-left: #c99e38;
  --icon-background: #c82626;
}

@font-face {
  font-family: "myfont";
  src: local("myfont"),
       url('./assets/fonts/pixelreg.woff2') format('woff2');
}

ul {
  list-style-type: none;
  padding: 0;
}

.App {
  text-align: left;
  font-family: "myfont";
  background: linear-gradient(90deg, var(--background-left), var(--background-right));
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header, .App-body {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  font-size: calc(3vmin);
  color: white;
  padding-left: 20px;
  padding-right: 20px;
}
@media (min-width: 600px) {
  .App-header, .App-body {
    font-size: calc(1.2vmin);
  }
  .react-tabs {
    min-width: 95%;
  }
}

.welcome-banner {
  color: var(--title);
}

.App-link {
  color: var(--text);
}

.Collapsible {
  cursor: pointer;
}

.countdown-soon {
  color: var(--background-left);
}

/* --- graphic container --- */
.graphic-container-outer {
  width: 85vw;
  margin: -45px 0px 0px 10px;
}
.graphic-container-icon-background {
  width: 40px;
  height: 40px;
  position: relative;
  top: 72px;
  left: -15px;
  background: url("./assets/images/icons/icon-background.png") no-repeat center center;
  background-color: var(--icon-background);
  border-radius: 50%;
  background-size: contain;
}
.graphic-container-icon {
  width: 34px;
  height: 34px;
  position: relative;
  top: 35px;
  left: -12px;
}
.graphic-container-icon.default {
  background: url("./assets/images/icons/pokeball-icon.png") no-repeat center center;
  background-size: contain;
}
.graphic-container-icon.event {
  background: url("./assets/images/icons/event-icon.png") no-repeat center center;
  background-size: contain;
}
.graphic-container-icon.raid {
  background: url("./assets/images/icons/raid-icon.png") no-repeat center center;
  background-size: contain;
}
.graphic-container-icon.shraid {
  background: url("./assets/images/icons/shraid-icon.png") no-repeat center center;
  background-size: contain;
}
.graphic-container-icon.egg {
  background: url("./assets/images/icons/egg-icon.png") no-repeat center center;
  background-size: contain;
}
.graphic-container-icon.leader {
  background: url("./assets/images/icons/leader-icon.png") no-repeat center center;
  background-size: contain;
}
.graphic-container-icon.research {
  background: url("./assets/images/icons/research-icon.png") no-repeat center center;
  background-size: contain;
}
.graphic-container-icon.upcoming {
  background: url("./assets/images/icons/upcoming-icon.png") no-repeat center center;
  background-size: contain;
}
.graphic-container-icon.mega {
  background: url("./assets/images/icons/mega-icon.png") no-repeat center center;
  background-size: contain;
}

.graphic-container-gradient {
  background-image: linear-gradient(135deg, var(--cont-grad-left), var(--cont-grad-right));
  margin-left: 10px;
}
.graphic-container-gradient > p {
  color: var(--container-title);
  height: 100%;
  padding: 0px;
  padding-top: 4px;
  padding-left: 20px;
  margin: 0px;
  margin-bottom: -10px;
}
.graphic-container-inner {
  color: var(--text);
  border-radius: 10px;
  border-style: solid;
  border-width: 2px;
  border-color: var(--container-border);
  background-image: linear-gradient(to left, var(--container-left), var(--container-right));
  width: 100%;
}
.graphic-container-inner > ul {
  margin-top: 20px;
  margin-bottom: 20px;
}
.graphic-container-inner > ul > li {
  margin-top: 5px;
  margin-left: 20px;
}
.graphic-container-inner > p {
  margin-left: 20px;
}
.graphic-container-inner > ul > li > div > div > p {
  margin: 0;
}
.show-mon-container {
  margin: 10px;
  border-style: solid;
  border-color: white;
  border-width: 1px;
  border-radius: 5px;
}
.show-mon-container > div > p {
  margin-left: 10px;
}

/* --- graphic mon --- */
.graphic-mon-outer {
  margin: 20px 0 10px 0;
}
.graphic-mon-outer > * {
  margin: auto;
}
.graphic-mon-background {  
  background: url("./assets/images/pokeball-background.png") no-repeat center center;
  width: 50px;
  height: 50px;
  background-size: contain;
}
.graphic-mon-image {
  width: 0;
  height: 0;
}
.graphic-mon-image > img {
  width: 80px;
  height: 80px;
  object-fit: cover;
  position: relative;
  top: -65px;
  left: -40px;
}
.graphic-mon-text {
  text-align: center;
  max-width: 90%;
}
.graphic-mon-shadow {
  width: 34px;
  height: 34px;
  object-fit: cover;
  position: relative;
  top: -152px;
  left: 0px;
  background: url("./assets/images/icons/shraid-icon.png") no-repeat center center;
  background-size: contain;
  border-radius: 50%;
  background-color: var(--icon-background);
}
.graphic-shadow-container {
  width: 34px;
}

/* --- Tabs --- */
.react-tabs {
  margin-top:10px;
}
.react-tabs__tab {
  margin: 2px;
  padding: 8px 3px 0px 5px;
  border-radius: 10px;
  border-width: 2px;
  border-style: dashed;
  border-color: var(--title);
  color: var(--title);
}
.react-tabs__tab.react-tabs__tab--selected {
  border-style: solid;
  background-color: var(--container-right);
  background: var(--container-right);
  color: var(--text);
}
.react-tabs__tab:focus:after {  
  content: '';
  position: absolute;
  height: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: transparent;
}
.react-tabs__tab-list {
  border-bottom: 0px;
}

.source-container {
  margin-left: 10px;
  margin-top: 30px;
}
.source-container > p {
  color: var(--text);
  background-image: linear-gradient(135deg, var(--container-left), transparent);
  padding: 10px;
}

.welcome-banner {
  margin-top: 32px;
  margin-left: 10px;
}

.view-description {
  margin-top: 32px;
  margin-left: 10px;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

